added background and removed top bar

--- a/app/src/main/res/layout/fragment_rules.xml
+++ b/app/src/main/res/layout/fragment_rules.xml
@@ -5,7 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".fragments.RulesFragment"
     tools:ignore="ExtraText,ScrollViewCount"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/table_background">
 
     <TextView
         android:layout_width="match_parent"
