--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,6 +6,7 @@
     android:gravity="center"
     android:showDividers="middle"
     android:divider="@drawable/space_divider_home"
+    android:background="@drawable/table_background"
     >
     <Button
         android:layout_width="wrap_content"
