--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,7 +5,8 @@
     android:orientation="vertical"
     android:gravity="center"
     android:showDividers="middle"
-    android:divider="@drawable/space_divider_home">
+    android:divider="@drawable/space_divider_home"
+    android:background="@drawable/table_background">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
